fixed ugly bat file